--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.16.4
-	yarn_mappings=1.16.4+build.9
+	minecraft_version=1.16.3
+	yarn_mappings=1.16.3+build.47
 	loader_version=0.16.10
 
 # Mod Properties
-	mod_version = 1.0-1.16.4
+	mod_version = 1.0-1.16.3
 	maven_group = fannmods
 	archives_base_name = pistonpushlimitextender
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.29.3+1.16
+	fabric_version=0.25.0+build.415-1.16
